# annotation-example

./: .gitignore  .pixi.sh  README.md  pyproject.toml
annotation_example/: __init__.py  op.py  skeletons.py
annotation_example/api/: calibrate_mv_videos.py  process_data.py
annotation_example/gradio_ui/: callbacks.py  mv_sam.py  mv_sam_callbacks.py  person_annot.py  person_annot_callbacks.py  person_annot_utils.py  sv_sam.py  sv_sam_callbacks.py  utils.py
tools/: app.py  calibrate_mv_videos.py  cli_demo.py  gradio_app_multiview.py  gradio_app_person_annotation.py  gradio_app_singleview.py
